--- a/Elecsite Test-Build update/update/login.html
+++ b/Elecsite Test-Build update/update/login.html
@@ -16,7 +16,7 @@
 					超越自己，突破自己。
 					<br>不惧艰险，迎难而上。
 					<br>做最成功的自己，过最不凡的人生。
-					<br>唯有探索，>才能让人生充满绚丽的色彩。
+					<br>唯有探索，才能让人生充满绚丽的色彩。
 				</div>
 			</div>
 		</div>
@@ -31,7 +31,7 @@
 				<hr style="background: white;" size="3px">
 				<div class="public_form">
 					<form action="" method="get">
-						<input type="text" id="input_usrname" placeholder="请输入用户名" class="input1" /><br />
+						<input type="text" id="input_usrname" placeholder="请输入Email" class="input1" /><br />
 						<input type=" password" id="input_password" placeholder="请输入密码" class="input2" /><br />
 						<span class="span_input_button_flex">
 							<input type="submit" value="登录" class="input_submit" />
@@ -59,7 +59,8 @@
 					<span style="color: white;">联系我们:<a href="mailto:2092056202agq@gmail.com"
 							style="text-decoration: none;color: white;padding-left: 10px;">Gmail<span
 								style="color: white;padding: 0px 10px;">|</span></a><a href="mailto:2092056202@qq.com"
-							style="color: white;text-decoration: none;">QQ邮箱</a></span>
+							style="color: white;text-decoration: none;">QQ邮箱</a>
+					</span>
 				</div>
 			</div>
 		</div>
