--- a/Elecsite Test-Build update/update/notfound.html
+++ b/Elecsite Test-Build update/update/notfound.html
@@ -10,12 +10,8 @@
 
 <body class="public_main">
     <div style="text-align:center;padding-top: 20%;color: white;">
-        <h1>哦，真抱歉。找不到你想要的页面了~~~<a href="./index.html" style="font-size: 10px;text-decoration: none;">返回首页</a></h1>
-        <span id="gotoone"></span>
-        <h2>Oh,Sorry.We not find the page~~~<a href="./index.html" style="font-size: 10px;text-decoration: none;">Back
-                Home</a>
-        </h2>
-        <span id="gototow"></span>
+        <h1>哦，真抱歉。找不到你想要的页面了~~~<span id="tipone"></span></h1>
+        <h1>Oh,Sorry.We not find the page~~~<span id="tiptwo"></span></h1>
     </div>
     <div class="public_copy">
         <div>
