--- a/Elecsite Test-Build update/update/login.html
+++ b/Elecsite Test-Build update/update/login.html
@@ -8,63 +8,61 @@
 </head>
 <!-- 文字部分 -->
 
-<body class="public_main">
-	<div class="public_main_flex">
-		<div class="public_text_main_flex">
-			<div class="public_text_font_style">
-				<div class="public_next_text_font_style">
-					超越自己，突破自己。
-					<br>不惧艰险，迎难而上。
-					<br>做最成功的自己，过最不凡的人生。
-					<br>唯有探索，才能让人生充满绚丽的色彩。
+<body class="main">
+	<div class="main_flex">
+		<div class="text_main_flex">
+			<div class="text_font_style">
+				<div class="next_text_font_style">
+					成功路上没有捷径可走，只有不断的失败与探索
 				</div>
 			</div>
 		</div>
 		<!-- 登录框部分 -->
-		<div class="public_login_flex">
-			<div align="center" class="public_next_login_main">
-				<div class="public_font_last_font_style">
+		<div class="login_flex">
+			<div align="center" class="next_login_main">
+				<div class="font_last_font_style">
 					<span class="span1">Elecsite</span>
-					<span class="span2">|</span>
-					<span class="span3">Never Give Up</span>
 				</div>
-				<hr style="background: white;" size="3px">
-				<div class="public_form">
+				<hr style="background: rgba(255,255,255,0.4);outline: none;border: none;" size="6px">
+				<div class="form">
 					<form action="" method="get">
 						<input type="text" id="input_usrname" placeholder="请输入Email" class="input1" /><br />
 						<input type=" password" id="input_password" placeholder="请输入密码" class="input2" /><br />
 						<span class="span_input_button_flex">
-							<input type="submit" value="登录" class="input_submit" />
+							<input type="submit" value="登录" class="input_submit" onclick="submit()" />
 					</form>
-					<a href=""><input type="button" value="还没有账号？点我注册" class="input_link"></a>
+					<a href="./register.html"><input type="button" value="还没有账号？点我注册" class="input_link"></a>
 					</span>
-					<hr style="background: white;" size="3px">
+					<hr style="background: rgba(255,255,255,0.4);outline: none;border: none;" size="6px">
 				</div>
 				<!-- 第三方登录部分 -->
 				<div style="margin-top: none;">
 					<a href="https://github.com"><img src="./img/icon/github.png" /></a>
 					<a href="https://google.com"><img src="./img/icon/google.png" /></a>
-					<a href="https://facebook.com"><img src="./img/icon/icon_facebook.png" /></a>
-					<a href="https://twitter.com"><img src="./img/icon/twitter.png" /></a>
+					<a href="https://facebook.com"><img src="./img/icon/icon_facebook.png" "></a>
+					<a href=" https://twitter.com"><img src="./img/icon/twitter.png" /></a>
 					<a href="https://weibo.com"><img src="./img/icon/weibo.png" /></a>
-					<a href="https://wechat.com"><img src="./img/icon/微信.png" /></a>
-				</div>
-			</div>
-			<!-- 版权信息 -->
-			<div class="public_copy">
-				<div>
-					<span>Copyright&copy;2020-2020 Elecsite</span>
-				</div>
-				<div class="public_next_copy">
-					<span style="color: white;">联系我们:<a href="mailto:2092056202agq@gmail.com"
-							style="text-decoration: none;color: white;padding-left: 10px;">Gmail<span
-								style="color: white;padding: 0px 10px;">|</span></a><a href="mailto:2092056202@qq.com"
-							style="color: white;text-decoration: none;">QQ邮箱</a>
-					</span>
+					<a href="https://weixin.qq.com/"><img src="./img/icon/微信.png" /></a>
 				</div>
 			</div>
 		</div>
 	</div>
+	<!-- 版权信息 -->
+	<div class="copy">
+		<div>
+			<span>Copyright&copy;2020-2020 Elecsite</span>
+		</div>
+		<div class=next_copy">
+			<span style="color: white;">联系我们:<a href="mailto:2092056202agq@gmail.com"
+					style="text-decoration: none;color: white;padding-left: 10px;">Gmail<span
+						style="color: white;padding: 0px 10px;">|</span></a><a href="mailto:2092056202@qq.com"
+					style="color: white;text-decoration: none;">QQ邮箱</a>
+			</span>
+		</div>
+	</div>
+	</div>
+	</div>
 </body>
+<script src="./js/login.js" type="text/javascript"></script>
 
 </html>
