改动了亿下下

--- a/Elecsite Test-Build update/update/notfound.html
+++ b/Elecsite Test-Build update/update/notfound.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" type="text/css" href="./css/notfound.css">
 </head>
 
-<body class="public_main">
-    <div style="text-align:center;padding-top: 20%;color: white;">
+<body class="main">
+    <div class="tips">
         <h1>哦，真抱歉。找不到你想要的页面了~~~<span id="tipone"></span></h1>
         <h1>Oh,Sorry.We not find the page~~~<span id="tiptwo"></span></h1>
     </div>
-    <div class="public_copy">
+    <div class="copy">
         <div>
             <span>Copyright&copy;2020-2020 Elecsite</span>
         </div>
-        <div class="public_next_copy">
+        <div class="next_copy">
             <span style="color: white;">联系我们:<a href="mailto:2092056202agq@gmail.com"
                     style="text-decoration: none;color: white;padding-left: 10px;">Gmail<span
                         style="color: white;padding: 0px 10px;">|</span></a><a href="mailto:2092056202@qq.com"
