--- a/Elecsite Test-Build update/update/sign_in.html
+++ b/Elecsite Test-Build update/update/sign_in.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>登录-Elecsite</title>
-	<link type="text/css" rel="stylesheet" href="./css/login.css">
+	<link type="text/css" rel="stylesheet" href="./css/sign_in.css">
 </head>
 <!-- 文字部分 -->
 
@@ -31,7 +31,7 @@
 						<span class="span_input_button_flex">
 							<input type="submit" value="登录" class="input_submit" onclick="submit()" />
 					</form>
-					<a href="./register.html"><input type="button" value="还没有账号？点我注册" class="input_link"></a>
+					<a href="./sign_up.html"><input type="button" value="还没有账号？点我注册" class="input_link"></a>
 					</span>
 					<hr style="background: rgba(255,255,255,0.4);outline: none;border: none;" size="6px">
 				</div>
@@ -55,7 +55,7 @@
 		<div class=next_copy">
 			<span style="color: white;">联系我们:<a href="mailto:2092056202agq@gmail.com"
 					style="text-decoration: none;color: white;padding-left: 10px;">Gmail<span
-						style="color: white;padding: 0px 10px;">|</span></a><a href="mailto:2092056202@qq.com"
+						style="color: white;padding: 0px 10px;">|</span></a><a class="href=" mailto:2092056202@qq.com"
 					style="color: white;text-decoration: none;">QQ邮箱</a>
 			</span>
 		</div>
