--- a/Elecsite Test-Build update/update/sign_up.html
+++ b/Elecsite Test-Build update/update/sign_up.html
@@ -33,13 +33,14 @@
                 <label id="labelEmail">Email</label>
             </div>
             <input type="submit" class="subbtn" id="subbtn" value="注册">
-            <button type="button" class="subbtn"><a style="color:white;text-decoration: none;"
-                    href="./sign_in.html">登录</a></button>
+            <button type="button" style="background-color: rgba(255, 53, 147, 0.26);border: none;"><a
+                    style="color:white;width: 10vw;text-decoration: none;" href="./sign_in.html">已有帐号？去登录</a></button>
         </form>
         <!-- 版权信息 -->
+
         <div class="copy">
-            <hr>
-            <div>
+            <hr size="8px" style="background: rgba(0, 89, 255, 0.5);margin: 0;border: none;width: 10%;">
+            <div style="padding-top: 1%;">
                 <span style="color: white;">Copyright&copy;2020-2020 Elecsite</span>
             </div>
             <div class="next_copy">
